# clawe-lab

./: .gitignore  LICENSE  README.md
projects/kanban-dashboard/: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  activity.json  alembic.ini  app.js  docker-compose.dev.yml  docker-compose.prod.yml  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pyproject.toml  server.py  styles.css  tasks.json  teams.json
projects/kanban-dashboard/.claude/: settings.json
projects/kanban-dashboard/.claude/agents/: backend.md  code-reviewer.md  database.md  design.md  devops.md  frontend.md  planner.md  qa.md
projects/kanban-dashboard/.claude/commands/: check-ignores.md  commit.md  create-command.md  create-pr.md  create-rules.md  design.md  implement.md  plan.md  prd.md  prime.md  rca.md  review-pr.md  sync.md  validate.md
projects/kanban-dashboard/.claude/rules/: javascript.md  python.md
projects/kanban-dashboard/.github/workflows/: ci.yml  deploy.yml
projects/kanban-dashboard/deploy/: SECRETS.md  backup.sh  env.example  env.production  nginx.conf.example  remote-deploy.sh
projects/kanban-dashboard/design-preview/: 404.html  README.md  board-mobile.html  board.html  empty.html  index.html  login.html  members.html  projects.html  stitch.html  task-drawer.html  task-new.html  tokens-page.html
projects/kanban-dashboard/design-preview/css/: styles.css  tokens.css
projects/kanban-dashboard/design-preview/js/: preview.js
projects/kanban-dashboard/design-preview/stitch/: board-mobile-original.html  board-mobile-v1-swipe.html  board-mobile-v2-edges.html  board-mobile-v3-minimal.html  (+28 more)
projects/kanban-dashboard/docker/: entrypoint.sh
projects/kanban-dashboard/docs/: ci-cd.md  openclaw-skill.md  ops.md
projects/kanban-dashboard/scripts/: approve_pr.sh  import_v1.py  log_activity.sh  reconcile_kanban.py
projects/kanban-dashboard/server/: config.py  db.py  deps.py  main.py  markdown.py
projects/kanban-dashboard/specs/: sdd-kanban-v2.md
projects/kanban-dashboard/systemd/: openclaw-kanban.service.example
projects/kanban-dashboard/tests/: conftest.py  test_activity.py  test_attachments.py  test_auth_tokens.py  test_comments.py  test_health.py  test_import_v1.py  test_isolation_gate.py  test_markdown.py  test_projects.py  test_tasks.py  test_teams.py  test_v1_legacy.py
projects/kanban-dashboard/tests-e2e/: board.spec.ts  fixtures.ts  phase5-finale.spec.ts  projects.spec.ts  smoke.spec.ts  visual.spec.ts
(+151 files in other folders)
